# book-release-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  authors.yaml  book_monitor.py  email_sender.py  email_templates.py  pyproject.toml  release_schedules.json  test_scraper.py
.github/workflows/: book_monitor.yml
scrapers/: __init__.py  base_book_scraper.py  book_notification.py
